SIS2-748: Add Code button to CKEditor5 for Simple HTML for users Blogger and Organisation

--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -28,6 +28,7 @@ settings:
       - insertTable
       - '|'
       - heading
+      - sourceEditing
   plugins:
     ckeditor5_heading:
       enabled_headings:
@@ -42,6 +43,8 @@ settings:
         -
           label: Resumé
           element: '<p class="resume">'
+    ckeditor5_sourceEditing:
+      allowed_tags: {  }
     ckeditor5_list:
       reversed: false
       startIndex: false
