--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -6,17 +6,17 @@ dependencies:
     - editor
 _core:
   default_config_hash: afTU0GNxo-MjXuKrD1zBE1IaHJRMmN1WXWmheRdJg8o
-name: 'Simpel HTML'
+name: 'Simpel HTML (til Blogger og Organisation)'
 format: basic_html
 weight: -8
 filters:
   filter_html:
     id: filter_html
     provider: filter
-    status: true
+    status: false
     weight: -10
     settings:
-      allowed_html: '<br> <p class> <h1 class="text-align-left text-align-center text-align-right text-align-justify"> <h2 class="text-align-left text-align-center text-align-right text-align-justify"> <h3 class="text-align-left text-align-center text-align-right text-align-justify"> <strong> <em> <a href> <ul> <ol> <li> <table> <tr> <td rowspan colspan> <th rowspan colspan> <thead> <tbody> <tfoot> <caption> <img src alt height width data-entity-uuid data-entity-type data-caption data-align data-image-size> <figcaption> <figure src alt data-entity-type data-entity-uuid data-align data-caption data-image-size>'
+      allowed_html: '<p class="default resume">'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
