SIS2-748: Create Simple HTML for anonymous, adjust permissions for this new text format

--- a/config/sync/field.field.node.dot_on_map.body.yml
+++ b/config/sync/field.field.node.dot_on_map.body.yml
@@ -13,6 +13,7 @@ third_party_settings:
     allowed_formats:
       - full_html
       - basic_html
+      - simpel_html_til_anonym_
 id: node.dot_on_map.body
 field_name: body
 entity_type: node
