--- a/config/sync/field.field.node.article.body.yml
+++ b/config/sync/field.field.node.article.body.yml
@@ -13,6 +13,7 @@ third_party_settings:
     allowed_formats:
       - full_html
       - basic_html
+      - simpel_html_til_anonym_
 _core:
   default_config_hash: IjZnOLWk1Pjq3WRg2pLSA1ERh7Po7izCq_p6UztZr2c
 id: node.article.body
