--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_display.node.page.full
+    - filter.format.basic_html
     - filter.format.full_html
     - filter.format.limited_html_link
     - filter.format.simpel_html_til_faktabokse
@@ -321,6 +322,7 @@ permissions:
   - 'use media remote_video bulk upload form'
   - 'use media sis_custom_video bulk upload form'
   - 'use media video bulk upload form'
+  - 'use text format basic_html'
   - 'use text format full_html'
   - 'use text format limited_html_link'
   - 'use text format simpel_html_til_faktabokse'
