--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - filter.format.basic_html
     - filter.format.simpel_html_til_faktabokse
     - media.type.document
     - media.type.image
@@ -60,6 +61,7 @@ permissions:
   - 'edit own video media'
   - 'use editorial transition afpublicere'
   - 'use editorial transition create_new_draft'
+  - 'use text format basic_html'
   - 'use text format simpel_html_til_faktabokse'
   - 'view latest version'
   - 'view own unpublished content'
