--- a/config/sync/core.entity_form_display.block_content.appetizer.default.yml
+++ b/config/sync/core.entity_form_display.block_content.appetizer.default.yml
@@ -59,7 +59,7 @@ content:
       field_widget_edit: true
       field_widget_remove: true
       field_widget_replace: false
-      open: true
+      open: false
       field_widget_display_settings:
         view_mode: small
       selection_mode: selection_append
