--- a/config/sync/core.entity_form_display.block_content.slideshow.default.yml
+++ b/config/sync/core.entity_form_display.block_content.slideshow.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - block_content.type.slideshow
-    - entity_browser.browser.media_directories_editor_browser
+    - entity_browser.browser.media_directories_modal
     - field.field.block_content.slideshow.field_slideshow_autoplay
     - field.field.block_content.slideshow.field_slideshow_images
   module:
@@ -28,7 +28,7 @@ content:
     weight: 0
     region: content
     settings:
-      entity_browser: media_directories_editor_browser
+      entity_browser: media_directories_modal
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
