--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_map/sis_map.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_map/sis_map.info.yml
@@ -2,7 +2,7 @@ name: SIS Map
 description: Module to display dots on a map
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 
 dependencies:
   - dds_dawa
