--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/sis_migration.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/sis_migration.info.yml
@@ -2,7 +2,7 @@ name: SIS Migration
 description: Migrate content from Drupal 7 to Drupal 9
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
  - migrate
  - migrate_drupal
