--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_misc/sis_misc.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_misc/sis_misc.info.yml
@@ -2,6 +2,6 @@ name: SIS Miscellaneous
 description: Miscellaneous
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
  - filter
