--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/sis_overview.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_overview/sis_overview.info.yml
@@ -2,7 +2,7 @@ name: SIS Overview
 description: Helper module for taxonomy overview
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 
 interface translation project: sis_overview
 interface translation server pattern: modules/contrib/sis_overview/translations/%language.po
