--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,19 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/8",
+            "exclude": [
+                "drupal/migrate_manifest",
+                "drupal/promote_disable"
+            ]
+        },
+        {
+            "type": "git",
+            "url": "https://git.drupalcode.org/issue/migrate_manifest-3288625.git"
+        },
+        {
+            "type": "git",
+            "url": "https://git.drupalcode.org/issue/promote_disable-3289171.git"
         },
         {
             "type": "composer",
@@ -22,7 +34,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-json": "*",
         "ext-pdo": "*",
         "bower-asset/jquery-simple-color": "^1.2",
@@ -31,22 +43,26 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal/address": "^1.10",
         "drupal/admin_toolbar": "^3.3",
-        "drupal/adminimal_admin_toolbar": "^1.11",
-        "drupal/adminimal_theme": "^1.6",
-        "drupal/allowed_formats": "^1.0",
+        "drupal/adminimal_admin_toolbar": "1.x-dev@dev",
+        "drupal/adminimal_theme": "^1.7",
+        "drupal/allowed_formats": "^2.0",
         "drupal/autosave_form": "^1.0",
-        "drupal/color_field": "^2.0",
-        "drupal/components": "^2.0@beta",
+        "drupal/ckeditor": "^1.0",
+        "drupal/color": "^1.0",
+        "drupal/color_field": "^3.0",
+        "drupal/components": "^3.0@beta",
         "drupal/config_ignore": "^2.3",
-        "drupal/config_split": "^1.7.0",
+        "drupal/config_split": "^2.0@RC",
         "drupal/cookiebot": "^1.0.0-alpha8",
-        "drupal/core": "^9.0",
-        "drupal/core-composer-scaffold": "^9.0",
-        "drupal/core-project-message": "^9.0",
+        "drupal/core": "^10.0",
+        "drupal/core-composer-scaffold": "^10.0",
+        "drupal/core-project-message": "^10.0",
         "drupal/core-vendor-hardening": "^9.0",
-        "drupal/ctools": "3.9.0 as 3.10.0",
-        "drupal/editor_advanced_link": "^1.8",
-        "drupal/entity_clone": "^1.0-beta4",
+        "drupal/ctools": "^4.0",
+        "drupal/dynamic_entity_reference": "^3.0",
+        "drupal/editor_advanced_link": "^2.2",
+        "drupal/entity_clone": "^2.0@beta",
+        "drupal/entity_embed": "^1.4",
         "drupal/entity_usage": "^2.0-beta3",
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.2",
@@ -54,6 +70,7 @@
         "drupal/focal_point": "^2.0@alpha",
         "drupal/honeypot": "^2.1",
         "drupal/hreflang": "^1.0",
+        "drupal/html5history": "1.x-dev@dev",
         "drupal/imageapi_optimize": "^4.0@beta",
         "drupal/inline_block_title_automatic": "^1.0",
         "drupal/layout_builder_at": "^2.0",
@@ -62,22 +79,23 @@
         "drupal/linkit": "^6.0.0-beta2",
         "drupal/lupus_taxonomy_import": "^1.2",
         "drupal/mailsystem": "^4.3",
-        "drupal/media_directories": "^2.0",
+        "drupal/media_directories": "^2.1@beta",
         "drupal/media_library_bulk_upload": "^1.0@alpha",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
         "drupal/migrate_file": "^2.1",
-        "drupal/migrate_manifest": "^3.0",
+        "drupal/migrate_manifest": "dev-3288625-automated-drupal-10",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
         "drupal/mobile_detect": "^3.0",
         "drupal/noreferrer": "^1.0",
         "drupal/oembed_providers": "^2.1",
-        "drupal/paragraphs": "^1.0",
-        "drupal/paragraphs_asymmetric_translation_widgets": "^1.0@beta",
+        "drupal/paragraphs": "^1.16",
+        "drupal/paragraphs_asymmetric_translation_widgets": "^1.2",
         "drupal/pathauto": "^1.11",
         "drupal/profile": "^1.7",
         "drupal/promote_disable": "^2.0",
+        "drupal/rdf": "^2.1",
         "drupal/redirect": "^1.0",
         "drupal/redirect_404": "^1.8",
         "drupal/redis": "^1.5",
@@ -88,29 +106,31 @@
         "drupal/scheduled_transitions": "^2.0",
         "drupal/search_api": "^1.0",
         "drupal/search_api_exclude_entity": "^1.0",
-        "drupal/search_api_page": "^1.0@beta",
-        "drupal/simple_sitemap": "^3.0",
-        "drupal/smtp": "^1.1",
-        "drupal/swiftmailer": "^2.2",
-        "drupal/taxonomy_machine_name": "^1.0@beta",
-        "drupal/view_unpublished": "^1.0",
-        "drupal/webform": "^6.0",
-        "drupal/webp": "^1.0.0-beta5",
-        "drupal/webp_extras": "1.x-dev@dev",
-        "drupal/workbench_email": "^2.2",
-        "drush/drush": "^10.0",
+        "drupal/search_api_page": "^1.0",
+        "drupal/simple_sitemap": "^4.1",
+        "drupal/smtp": "^1.2",
+        "drupal/stable": "^2.0",
+        "drupal/swiftmailer": "^2.4",
+        "drupal/taxonomy_machine_name": "^2.0",
+        "drupal/typed_data": "^1.0@beta",
+        "drupal/view_unpublished": "^1.1",
+        "drupal/webform": "^6.2@RC",
+        "drupal/webp": "^1.0@RC",
+        "drupal/webp_extras": "^2.0@beta",
+        "drupal/workbench_email": "^3.0",
+        "drush/drush": "^12",
         "novicell/atoms": "^1.0",
         "novicell/content_hierarchy": "^1.0",
-        "novicell/dds_dawa": "^1.1",
+        "novicell/dds_dawa": "2.0.1-alpha.2",
         "novicell/drupal-premium-theme": "^1.0",
-        "novicell/dynamic_key_value": "^1.0",
+        "novicell/dynamic_key_value": "1.1.9",
         "novicell/entity_overview": "^2.0",
         "novicell/media_icons": "^1.0",
         "novicell/premium_articles": "^2.0",
         "novicell/premium_core": "^1.0",
         "novicell/premium_profile": "^1.0",
         "novicell/premium_tools": "^1.0",
-        "novicell/relewise": "^2.0",
+        "novicell/relewise": "2.0.18",
         "novicell/status_feed": "^1.0",
         "novicell/styles": "^1.0",
         "oomphinc/composer-installers-extender": "^2.0",
@@ -118,7 +138,7 @@
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
-        "drupal/devel": "^4.1",
+        "drupal/devel": "^5.1",
         "kint-php/kint": "^3.3"
     },
     "conflict": {
@@ -128,7 +148,7 @@
     "prefer-stable": true,
     "config": {
         "platform": {
-            "php": "8.0"
+            "php": "8.1"
         },
         "optimize-autoloader": true,
         "sort-packages": true,
@@ -139,10 +159,12 @@
             "drupal/core-project-message": true,
             "drupal/core-vendor-hardening": true,
             "oomphinc/composer-installers-extender": true,
-            "wikimedia/composer-merge-plugin": true
+            "wikimedia/composer-merge-plugin": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
+        "enable-patching": true,
         "drupal-scaffold": {
             "allowed-packages": [
                 "drupal/core"
@@ -207,14 +229,20 @@
             "drupal/paragraphs": {
                 "(#2901390) Integrity constraint violation: 1048 Column 'langcode' cannot be null": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch"
             },
-            "drupal/webp": {
-                "(#3153137) Using Image Widget Crop in responsive images does not refresh webp image": "https://www.drupal.org/files/issues/2021-05-04/webp-support-image-crop-3153137-11.patch"
-            },
             "drupal/cookiebot": {
                 "(#3091260) Blockmode 'Auto' will not work in Drupal 8 with core's domready library": "https://www.drupal.org/files/issues/2020-10-08/cookiebot-blocking-auto-mode.patch"
             },
             "drupal/scheduled_transitions": {
                 "(#3210877) Get node lock message...": "https://www.drupal.org/files/issues/2021-04-27/scheduled_transitions-3210877-node_lock_message-2.patch"
+            },
+            "drupal/migrate_manifest": {
+                "(#3288625) Automated Drupal 10 compatibility fixes for Migrate Manifest\n": "https://www.drupal.org/files/issues/2023-06-01/migrate_manifest_d10_3288625-6.patch"
+            },
+            "drupal/promote_disable": {
+                "(#3289171) Automated Drupal 10 compatibility fixes": "https://www.drupal.org/files/issues/2022-06-16/promote_disable.2.0.0.rector.patch"
+            },
+            "drupal/media_directories": {
+              "(#3383658) Images in media browser have no hover effect and selected effect in media browser": "https://www.drupal.org/files/issues/2023-08-28/media_directories_ui_browser_css.patch"
             }
         }
     }
