--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -107,6 +107,7 @@ module:
   paragraphs_asymmetric_translation_widgets: 0
   path: 0
   path_alias: 0
+  phpass: 0
   premium_articles: 0
   premium_core: 0
   premium_theme_helper: 0
