--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/sis_almanac.info.yml
@@ -2,4 +2,4 @@ name: SIS Almanac
 description: Show almanac
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
