--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/sis_lexicon.info.yml
@@ -2,7 +2,7 @@ name: SIS Lexicon
 description: Helper module for lexicon
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 
 dependencies:
   - entity_overview:entity_overview
