--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_news/sis_news.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_news/sis_news.info.yml
@@ -2,4 +2,4 @@ name: SIS News
 description: News helper module
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
