--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/sis_organization.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/sis_organization.info.yml
@@ -2,7 +2,7 @@ name: SIS Organization
 description: Helper module for organizations
 package: Skoven i Skolen
 type: module
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 
 interface translation project: sis_organization
 interface translation server pattern: modules/contrib/sis_organization/translations/%language.po
