D10 Upgrade: fix configuration

--- a/config/sync/field.storage.block_content.field_entity_bundle.yml
+++ b/config/sync/field.storage.block_content.field_entity_bundle.yml
@@ -10,7 +10,7 @@ field_name: field_entity_bundle
 entity_type: block_content
 type: entity_reference
 settings:
-  target_type: 'entity_bundle:node'
+  target_type: node_type
 module: core
 locked: false
 cardinality: 1
