--- a/config/sync/block.block.claro_content.yml
+++ b/config/sync/block.block.claro_content.yml
@@ -1,15 +1,15 @@
-uuid: df48d7b7-25d3-458f-ada6-14170b445b75
+uuid: 2c069e05-8770-4087-b85b-529f9308bfde
 langcode: da
 status: true
 dependencies:
   module:
     - system
   theme:
-    - adminimal_theme
+    - claro
 _core:
-  default_config_hash: 80N66GdzEvwqi1m-_GZ-ulkk8AJG9beoXcZ4-pMVKjI
-id: adminimal_theme_content
-theme: adminimal_theme
+  default_config_hash: a0Yyx1GeyKarZ4T_yXQBR_ZFKnXiFLtxAb6gWLd8nr0
+id: claro_content
+theme: claro
 region: content
 weight: 0
 provider: null
