--- a/config/sync/block.block.claro_help.yml
+++ b/config/sync/block.block.claro_help.yml
@@ -1,15 +1,15 @@
-uuid: 585e7ad9-4621-4350-9b5f-bdd605e032ab
+uuid: c13a004b-83dd-47f4-9d9a-bd23d637e173
 langcode: da
 status: true
 dependencies:
   module:
     - help
   theme:
-    - adminimal_theme
+    - claro
 _core:
-  default_config_hash: PfozGAnWQRNy00G6KEnZjIu9b2lGuWg-j-GT_-Ejglc
-id: adminimal_theme_help
-theme: adminimal_theme
+  default_config_hash: jccFSSVqV0WCDb6NtML1VWAWTtDbZ-zn5YgTRMgMrIM
+id: claro_help
+theme: claro
 region: help
 weight: 0
 provider: null
