--- a/config/sync/block.block.claro_local_actions.yml
+++ b/config/sync/block.block.claro_local_actions.yml
@@ -1,13 +1,13 @@
-uuid: 952d0dd4-01fe-4e97-82d5-ade9cefdde98
+uuid: 8ad7655e-df62-4e4e-bf14-1827fcfb6606
 langcode: da
 status: true
 dependencies:
   theme:
-    - adminimal_theme
+    - claro
 _core:
-  default_config_hash: ik4PTMlBD0MWansnSMpSXq5SUlWRJ1IVVt6C7AIbQmc
-id: adminimal_theme_local_actions
-theme: adminimal_theme
+  default_config_hash: CdXfDmRgAvms7EQovxxWPdYi0GitxeRbVtScYK16ZH0
+id: claro_local_actions
+theme: claro
 region: content
 weight: -10
 provider: null
