--- a/config/sync/block.block.claro_messages.yml
+++ b/config/sync/block.block.claro_messages.yml
@@ -1,15 +1,15 @@
-uuid: 255f3d6e-679e-4bc6-b834-4224b8ab85af
+uuid: 66133a12-7a54-467c-9e94-fe14f879702c
 langcode: da
 status: true
 dependencies:
   module:
     - system
   theme:
-    - adminimal_theme
+    - claro
 _core:
-  default_config_hash: YqKTtloWJ8FjLtfVNfrHaK6kVgxT67lC1cJ3j6i6WLo
-id: adminimal_theme_messages
-theme: adminimal_theme
+  default_config_hash: '-Ac3ISpIT0PQ-whzD7_dw0SdKi6dAbRFNWdSjOiVDqg'
+id: claro_messages
+theme: claro
 region: highlighted
 weight: 0
 provider: null
