--- a/config/sync/block.block.gin_breadcrumbs.yml
+++ b/config/sync/block.block.gin_breadcrumbs.yml
@@ -1,15 +1,15 @@
-uuid: fc1785d3-177a-47c2-909f-73e9684fbce2
+uuid: f43e847b-c185-4ff2-a469-07b8702233ac
 langcode: da
 status: true
 dependencies:
   module:
     - system
   theme:
-    - adminimal_theme
+    - gin
 _core:
-  default_config_hash: 8by5KRsb7ZpmjHj0ms1d7xAG_xH54AWsOX6spDLJ59U
-id: adminimal_theme_breadcrumbs
-theme: adminimal_theme
+  default_config_hash: y9X3xgCsO59pQyzNLzY1D3SDJJxCHILLWkpPnmuTJ2E
+id: gin_breadcrumbs
+theme: gin
 region: breadcrumb
 weight: 0
 provider: null
