--- a/config/sync/block.block.gin_messages.yml
+++ b/config/sync/block.block.gin_messages.yml
@@ -1,22 +1,22 @@
-uuid: eec592f1-f07f-45c5-9c87-27a3917c995d
+uuid: 192185e3-e51e-4dde-98a4-c40d164c7a9f
 langcode: da
 status: true
 dependencies:
   module:
     - system
   theme:
-    - seven
+    - gin
 _core:
-  default_config_hash: eGulZgkPKZ6-d1r0JfLOQ-tfTk381W6GNaafy8650kU
-id: seven_messages
-theme: seven
-region: header
-weight: -2
+  default_config_hash: WvPhI8OwllG0gE69-F8qL3ai3nd5SbYD6JpmEuZcyok
+id: gin_messages
+theme: gin
+region: highlighted
+weight: 0
 provider: null
 plugin: system_messages_block
 settings:
   id: system_messages_block
-  label: Beskeder
+  label: 'Status messages'
   label_display: '0'
   provider: system
 visibility: {  }
