--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -5,9 +5,6 @@ module:
   address: 0
   admin_toolbar: 0
   admin_toolbar_links_access_filter: 0
-  admin_toolbar_search: 0
-  admin_toolbar_tools: 0
-  adminimal_admin_toolbar: 0
   allowed_formats: 0
   atoms: 0
   automated_cron: 0
@@ -61,6 +58,7 @@ module:
   file_delete: 0
   filter: 0
   focal_point: 0
+  gin_toolbar: 0
   help: 0
   honeypot: 0
   hreflang: 0
@@ -168,6 +166,6 @@ theme:
   stable: 0
   premium_theme: 0
   sis: 0
-  seven: 0
-  adminimal_theme: 0
+  claro: 0
+  gin: 0
 profile: premium_profile
