Updated user role configs

--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -87,7 +87,6 @@ permissions:
   - 'access webform help'
   - 'access webform overview'
   - 'access webform submission user'
-  - 'add scheduled transitions node page'
   - 'administer atoms'
   - 'administer menu'
   - 'administer meta tags'
@@ -121,7 +120,6 @@ permissions:
   - 'create field_files_webmasters'
   - 'create field_list_media'
   - 'create field_list_media_anonymous'
-  - 'create field_summary'
   - 'create field_top_image'
   - 'create field_top_image_anonymous'
   - 'create image media'
@@ -178,6 +176,7 @@ permissions:
   - 'delete own blog_post content'
   - 'delete own document media'
   - 'delete own dot_on_map content'
+  - 'delete own files'
   - 'delete own image media'
   - 'delete own link_article content'
   - 'delete own news content'
@@ -230,7 +229,6 @@ permissions:
   - 'edit field_files_webmasters'
   - 'edit field_list_media'
   - 'edit field_list_media_anonymous'
-  - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit field_top_image_anonymous'
   - 'edit own almanac content'
@@ -249,7 +247,6 @@ permissions:
   - 'edit own field_files_webmasters'
   - 'edit own field_list_media'
   - 'edit own field_list_media_anonymous'
-  - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own field_top_image_anonymous'
   - 'edit own image media'
@@ -274,7 +271,6 @@ permissions:
   - 'edit terms in subjects'
   - 'edit terms in time'
   - 'edit webform assets'
-  - 'reschedule scheduled transitions node page'
   - 'revert all revisions'
   - 'revert almanac revisions'
   - 'revert article revisions'
@@ -285,7 +281,6 @@ permissions:
   - 'revert page revisions'
   - 'select account cancellation method'
   - 'translate atom'
-  - 'translate menu_link_content'
   - 'translate page node'
   - 'update any media'
   - 'update any organization profile'
@@ -347,6 +342,5 @@ permissions:
   - 'view own unpublished profile'
   - 'view own webform submission'
   - 'view page revisions'
-  - 'view scheduled transitions node page'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
