--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - filter.format.simpel_html_til_anonym_
     - filter.format.simpel_html_til_faktabokse
+    - filter.format.webform_default
   module:
     - field_permissions
+    - file
     - filter
     - media
     - profile
@@ -19,18 +21,15 @@ label: 'Godkendt bruger'
 weight: 1
 is_admin: false
 permissions:
-  - 'access comments'
   - 'access content'
   - 'access shortcuts'
-  - 'access site-wide contact form'
   - 'access user profiles'
   - 'create field_files'
+  - 'delete own files'
   - 'edit own field_files'
-  - 'post comments'
-  - 'search content'
-  - 'skip comment approval'
   - 'use text format simpel_html_til_anonym_'
   - 'use text format simpel_html_til_faktabokse'
+  - 'use text format webform_default'
   - 'view any organization profile'
   - 'view any profile'
   - 'view field_article_image'
@@ -44,7 +43,6 @@ permissions:
   - 'view field_files'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
-  - 'view field_summary'
   - 'view field_top_image'
   - 'view field_top_image_anonymous'
   - 'view media'
@@ -57,6 +55,5 @@ permissions:
   - 'view own field_files'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
-  - 'view own field_summary'
   - 'view own field_top_image'
   - 'view own field_top_image_anonymous'
