--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -90,7 +90,6 @@ permissions:
   - 'access webform help'
   - 'access webform overview'
   - 'access webform submission user'
-  - 'add scheduled transitions node page'
   - 'administer atoms'
   - 'administer menu'
   - 'administer meta tags'
@@ -134,7 +133,6 @@ permissions:
   - 'create field_header'
   - 'create field_list_media'
   - 'create field_list_media_anonymous'
-  - 'create field_summary'
   - 'create field_top_image'
   - 'create field_top_image_anonymous'
   - 'create image media'
@@ -191,6 +189,7 @@ permissions:
   - 'delete own blog_post content'
   - 'delete own document media'
   - 'delete own dot_on_map content'
+  - 'delete own files'
   - 'delete own image media'
   - 'delete own link_article content'
   - 'delete own news content'
@@ -244,7 +243,6 @@ permissions:
   - 'edit field_header'
   - 'edit field_list_media'
   - 'edit field_list_media_anonymous'
-  - 'edit field_summary'
   - 'edit field_top_image'
   - 'edit field_top_image_anonymous'
   - 'edit own almanac content'
@@ -264,7 +262,6 @@ permissions:
   - 'edit own field_header'
   - 'edit own field_list_media'
   - 'edit own field_list_media_anonymous'
-  - 'edit own field_summary'
   - 'edit own field_top_image'
   - 'edit own field_top_image_anonymous'
   - 'edit own image media'
@@ -289,7 +286,6 @@ permissions:
   - 'edit terms in subjects'
   - 'edit terms in time'
   - 'edit webform assets'
-  - 'reschedule scheduled transitions node page'
   - 'revert all revisions'
   - 'revert almanac revisions'
   - 'revert article revisions'
@@ -300,7 +296,6 @@ permissions:
   - 'revert page revisions'
   - 'select account cancellation method'
   - 'translate atom'
-  - 'translate menu_link_content'
   - 'translate page node'
   - 'update any media'
   - 'update any organization profile'
@@ -362,6 +357,5 @@ permissions:
   - 'view own unpublished profile'
   - 'view own webform submission'
   - 'view page revisions'
-  - 'view scheduled transitions node page'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
