--- a/composer.json
+++ b/composer.json
@@ -122,7 +122,7 @@
         "drush/drush": "^12",
         "novicell/atoms": "^1.0",
         "novicell/content_hierarchy": "^1.0",
-        "novicell/dds_dawa": "2.0.1-alpha.2",
+        "novicell/dds_dawa": "^2.0",
         "novicell/drupal-premium-theme": "^1.0",
         "novicell/dynamic_key_value": "1.1.9",
         "novicell/entity_overview": "^2.0",
@@ -131,7 +131,7 @@
         "novicell/premium_core": "^1.0",
         "novicell/premium_profile": "^1.0",
         "novicell/premium_tools": "^1.0",
-        "novicell/relewise": "2.0.18",
+        "novicell/relewise": "^2.0.19",
         "novicell/status_feed": "^1.0",
         "novicell/styles": "^1.0",
         "oomphinc/composer-installers-extender": "^2.0",
