--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.info.yml
@@ -5,7 +5,7 @@ package: Drupal Premium
 version: 2.0.0
 core_version_requirement: ^8.8 || ^9 || ^10
 base theme: premium_theme
-ckeditor_stylesheets:
+ckeditor5_stylesheets:
   - dist/components/css/base/ckeditor.css
 
 dependencies:
