--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -66,6 +66,7 @@ module:
   image: 0
   imageapi_optimize: 0
   inline_block_title_automatic: 0
+  jquery_once: 0
   language: 0
   layout_builder: 0
   layout_builder_at: 0
