--- a/config/sync/editor.editor.simpel_html_til_faktabokse.yml
+++ b/config/sync/editor.editor.simpel_html_til_faktabokse.yml
@@ -1,40 +1,48 @@
-uuid: 6de46344-42df-444a-af81-e46ef9d248da
+uuid: 9d9b9ae1-50e1-467f-82fe-1190715b4f7b
 langcode: da
 status: true
 dependencies:
   config:
     - filter.format.simpel_html_til_faktabokse
   module:
-    - ckeditor
+    - ckeditor5
 format: simpel_html_til_faktabokse
-editor: ckeditor
+editor: ckeditor5
 settings:
   toolbar:
-    rows:
-      -
-        -
-          name: Formatering
-          items:
-            - Bold
-            - Italic
-        -
-          name: Links
-          items:
-            - DrupalLink
-            - DrupalUnlink
-        -
-          name: Lister
-          items:
-            - BulletedList
-            - NumberedList
-        -
-          name: Media
-          items:
-            - Blockquote
+    items:
+      - bold
+      - italic
+      - '|'
+      - link
+      - '|'
+      - bulletedList
+      - numberedList
+      - '|'
+      - blockQuote
+      - '|'
+      - heading
+      - code
+      - sourceEditing
   plugins:
-    drupallink:
+    ckeditor5_heading:
+      enabled_headings:
+        - heading2
+        - heading3
+        - heading4
+        - heading5
+        - heading6
+    ckeditor5_list:
+      reversed: false
+      startIndex: true
+    ckeditor5_sourceEditing:
+      allowed_tags:
+        - '<img src alt data-entity-type data-entity-uuid data-image-size>'
+    editor_advanced_link_link:
+      enabled_attributes:
+        - rel
+    linkit_extension:
       linkit_enabled: false
-      linkit_profile: ''
 image_upload:
   status: false
   scheme: public
