SIS2-851: Changed newsletter form to be loaded in via JavaScript to prevent spambots

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -435,6 +435,13 @@ news-form:
     - core/drupal.ajax
     - sis/form-select
 
+newsletter-form:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/newsletter-form.css: {}
+  js:
+    dist/components/js/newsletter-form.js: {}
 
 profile:
   version: VERSION
