SIS2-811: Enabled headings for full_html CKEditor 5 format

--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -31,6 +31,7 @@ settings:
       - horizontalLine
       - '|'
       - style
+      - heading
       - '|'
       - sourceEditing
   plugins:
@@ -40,6 +41,13 @@ settings:
         - justify
         - left
         - right
+    ckeditor5_heading:
+      enabled_headings:
+        - heading2
+        - heading3
+        - heading4
+        - heading5
+        - heading6
     ckeditor5_imageResize:
       allow_resize: true
     ckeditor5_list:
