--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -151,6 +151,7 @@ permissions:
   - 'delete any blog_post content'
   - 'delete any document media'
   - 'delete any dot_on_map content'
+  - 'delete any file'
   - 'delete any image media'
   - 'delete any link_article content'
   - 'delete any media'
