SIS2-873: Updated Relewise to new version

--- a/config/sync/entity_overview.overview.blog.yml
+++ b/config/sync/entity_overview.overview.blog.yml
@@ -13,6 +13,8 @@ entity_bundles:
     - blog_post
 fields:
   text: search
-engine_id: relewise
+engine_id: relewise_content
+engine_settings:
+  index: ''
 sort_field: created
 show_total: ''
