--- a/config/sync/entity_overview.overview.node_article.yml
+++ b/config/sync/entity_overview.overview.node_article.yml
@@ -23,5 +23,7 @@ fields:
   field_season: checkboxes
   field_subject: checkboxes
 engine_id: custom_relewise
+engine_settings:
+  index: ''
 sort_field: created
 show_total: results
